--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -132,7 +132,8 @@ $grid-breakpoints: (
         sm: 480px,
         md: 801px,
         lg: 1024px,
-        xl: 1280px
+        xl: 1280px,
+        xxl: 1680px
 );
 //@include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
 //
