--- a/src/scss/sections/_intro.scss
+++ b/src/scss/sections/_intro.scss
@@ -3,9 +3,16 @@
 
 #intro {
   @extend %article-wrapper;
+  height: 100vh;
+  min-height: 630px;
+
+  @include media-breakpoint-up(xxl) {
+    min-height: 900px;
+  }
 
   & .section-header {
-    width: 50%;
+    width: 100%;
+    height: 100%;
   }
 
   & .intro-name {
@@ -14,19 +21,23 @@
   }
 
   & .intro-job-title {
-    @include text-thin-title();
+    @include text-thin-title-big();
     display: block;
-    font-size: 4.6rem;
-    letter-spacing: -0.1rem;
   }
 
   & .intro-message {
-    margin-bottom: 100px;
+    margin-bottom: 3rem;
   }
 
   & .section-header-img-wrapper {
     max-width: 400px;
-    margin-bottom: 3rem;
+    width: 20%;
+    margin-bottom: 1rem;
+
+    @include media-breakpoint-up(xxl) {
+      width: 42%;
+      margin-bottom: 2rem;
+    }
   }
 
   & .section-header-sub-title {
@@ -52,16 +63,14 @@
 
   .intro-teaser-title {
     @include text-thin-title();
-    display: none;
-    position: absolute;
+    visibility: hidden;
     width: 100%;
     text-align: center;
-    left: 0;
-    bottom: 0;
+    margin-bottom: 0;
   }
 
   &.teaser-title-visible .intro-teaser-title {
-    display: block;
+    visibility: visible;
   }
 }
 
