--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -133,7 +133,8 @@ $grid-breakpoints: (
         md: 801px,
         lg: 1024px,
         xl: 1280px,
-        xxl: 1680px
+        xxl: 1680px,
+        xxxl: 1921px
 );
 //@include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
 //
