--- a/src/scss/sections/_portfolio.scss
+++ b/src/scss/sections/_portfolio.scss
@@ -16,12 +16,6 @@
     max-width: 300px;
   }
 
-  & .section-header {
-    position: absolute;
-    top: calc(50vh - 273px);
-    left: 0;
-  }
-
   &.portfolio-item--open .section-header {
     display: none;
   }
@@ -61,6 +55,7 @@
   }
 
   %portfolio-item {
+    min-height: 800px;
     height: 100vh;
     display: flex;
     margin-bottom: 0;
@@ -68,19 +63,10 @@
 
   .portfolio-item-title {
     @include text-regular-title-small();
-    max-width: 92%;
+    width: 70%;
     margin-bottom: 0.3rem;
     @include media-breakpoint-up(xxl) {
       max-width: none;
-    }
-  }
-
-  .portfolio-item-text {
-    @include text-base();
-    line-height: 1.3;
-    margin-bottom: 0.3rem;
-    @include media-breakpoint-up(xxl) {
-      margin-bottom: 1rem;
     }
   }
 
@@ -88,10 +74,20 @@
     @include text-thin-title-small();
     margin-top: 0;
     margin-bottom: 0;
-    @include media-breakpoint-up(xxl) {
-      //margin-top: 1rem;
-    }
+    width: 80%;
   }
+  .portfolio-item-text {
+    @include text-base();
+    line-height: 1.2;
+    margin-bottom: 0.1rem;
+    width: 74%;
+    @include media-breakpoint-up(xxl) {
+      margin-bottom: 1rem;
+      line-height: 1.3;
+    }
+
+  }
+
 
   .portfolio-item-title-wrapper {
     display: none;
@@ -104,12 +100,10 @@
     background-size: 100%;
     background-position: center;
     min-height: 320px;
-    padding: 0 4%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     @include media-breakpoint-up(xxl) {
-      padding: 0 3rem;
     }
   }
 
@@ -388,7 +382,6 @@
     & .portfolio-item-desktop {
       top: 18%;
       left: 15%;
-
       @include media-breakpoint-up(xxl) {
         top: 13%;
       }
@@ -415,7 +408,7 @@
 
     & .portfolio-item-title-wrapper {
       right: -33.5%;
-      top: -11%;
+      top: -16%;
     }
 
     & .portfolio-item-subtitle-employer {
@@ -459,7 +452,7 @@
 
     & .portfolio-item-title-wrapper {
       left: -36%;
-      top: -13%;
+      top: -18%;
     }
 
     & .portfolio-item-subtitle-employer {
@@ -499,7 +492,7 @@
 
     & .portfolio-item-title-wrapper {
       left: 104%;
-      top: -10.5%;
+      top: -21%;
     }
 
     & .portfolio-item-subtitle-employer {
@@ -539,7 +532,7 @@
 
     & .portfolio-item-title-wrapper {
       left: -36%;
-      top: -7%;
+      top: -13%;
     }
 
     & .portfolio-item-subtitle-employer {
