--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5349,11 +5349,21 @@ body {
   text-align: center; }
 
 .article-body {
-  width: 75%;
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative; }
+  position: relative;
+  width: 100%;
+  margin-left: 0; }
+
+@media (min-width: 1280px) and (max-width: 1679px) {
+  .article-body {
+    width: 77%;
+    margin-left: 23%; } }
+  @media (min-width: 1680px) {
+    .article-body {
+      width: 75%;
+      margin-left: 25%; } }
 
 .article-title-wrapper {
   text-align: center;
@@ -5364,6 +5374,21 @@ body {
 
 .section-header-img {
   width: 100%; }
+
+.section-header {
+  position: absolute;
+  top: 0; }
+  @media (max-width: 1279px) {
+    .section-header {
+      display: none; } }
+
+.scrolling-this .section-header {
+  position: fixed; }
+
+.scrolled-this .section-header {
+  position: absolute;
+  top: auto;
+  bottom: 0; }
 
 .section-header-img-wrapper {
   width: 100%;
@@ -5807,9 +5832,9 @@ body {
     visibility: visible; }
 
 #skills {
-  min-height: 80vh; }
-  #skills .section-header {
-    left: 3%; }
+  height: 80vh; }
+  #skills .article-body {
+    height: 80vh; }
   #skills .section-header-img-wrapper {
     max-width: 250px; }
   #skills .article-img-wrapper {
@@ -5926,19 +5951,6 @@ body {
     max-width: 300px; }
   #portfolio.portfolio-item--open .section-header {
     display: none; }
-  #portfolio.scrolling-this .section-header {
-    position: fixed; }
-  #portfolio.scrolled-this .section-header {
-    position: absolute;
-    top: auto;
-    bottom: calc(50vh - 273px); }
-  #portfolio .article-body {
-    width: 77%;
-    margin-left: 23%; }
-    @media (min-width: 1680px) {
-      #portfolio .article-body {
-        width: 75%;
-        margin-left: 25%; } }
   #portfolio .portfolio-item-img {
     width: 100%;
     height: auto; }
@@ -5958,15 +5970,12 @@ body {
     letter-spacing: -0.08rem;
     line-height: 1.1;
     color: #000;
-    width: 70%;
+    width: 76%;
     margin-bottom: 0.3rem; }
     @media (min-width: 1680px) {
       #portfolio .portfolio-item-title {
         font-size: 2.2rem;
         letter-spacing: -0.12rem; } }
-    @media (min-width: 1680px) {
-      #portfolio .portfolio-item-title {
-        max-width: none; } }
   #portfolio .portfolio-item-secondary-title {
     font-family: "worksans-thin", sans-serif;
     font-size: 1.4rem;
@@ -6000,40 +6009,57 @@ body {
         margin-bottom: 1rem;
         line-height: 1.3; } }
   #portfolio .portfolio-item-title-wrapper {
-    display: none;
+    display: block;
+    position: absolute;
+    width: 31%;
+    max-width: 200px;
+    padding-top: 42%; }
+    @media (min-width: 1680px) {
+      #portfolio .portfolio-item-title-wrapper {
+        max-width: 241px; } }
+  #portfolio .portfolio-item-title-wrapper-horizontal {
+    display: block;
+    position: absolute;
+    width: 52%;
+    max-width: 270px;
+    padding-top: 39%; }
+    @media (min-width: 1680px) {
+      #portfolio .portfolio-item-title-wrapper-horizontal {
+        max-width: 320px; } }
+    #portfolio .portfolio-item-title-wrapper-horizontal .portfolio-item-title-content {
+      background-image: url("/img/portfolio/frame-horizontal.png"); }
+    #portfolio .portfolio-item-title-wrapper-horizontal .portfolio-item-title {
+      margin-bottom: 0.3rem;
+      margin-top: 0; }
+    #portfolio .portfolio-item-title-wrapper-horizontal .portfolio-item-secondary-title {
+      margin-top: 0; }
+    #portfolio .portfolio-item-title-wrapper-horizontal .portfolio-item-text {
+      margin-bottom: 0;
+      line-height: 1.2;
+      width: 80%; }
+  #portfolio .portfolio-item-title-content {
+    display: flex;
     text-align: center;
     position: absolute;
-    max-width: 241px;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     background-image: url("/img/portfolio/frame.png");
-    width: 31%;
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center;
-    min-height: 320px;
     flex-direction: column;
     justify-content: center;
     align-items: center; }
-  #portfolio .portfolio-item-title-wrapper-horizontal {
-    display: none;
-    text-align: center;
+  #portfolio .portfolio-item-title-centering {
     position: absolute;
-    max-width: 320px;
-    width: 61%;
-    background-image: url("/img/portfolio/frame-horizontal.png");
-    background-repeat: no-repeat;
-    background-size: 100%;
-    min-height: 241px;
-    padding: 3.5rem 4rem;
-    left: 60%;
-    top: 8%; }
-    #portfolio .portfolio-item-title-wrapper-horizontal .portfolio-item-title {
-      margin-bottom: 0.3rem;
-      margin-top: 0.3rem; }
-    #portfolio .portfolio-item-title-wrapper-horizontal .portfolio-item-secondary-title {
-      margin-top: 0.3rem; }
-    #portfolio .portfolio-item-title-wrapper-horizontal .portfolio-item-text {
-      margin-bottom: 0;
-      line-height: 1.2; }
+    bottom: 70%;
+    left: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
   #portfolio .child-hovered .portfolio-item-title-wrapper,
   #portfolio .child-hovered .portfolio-item-title-wrapper-horizontal {
     display: flex; }
@@ -6054,7 +6080,7 @@ body {
     z-index: 0; }
   #portfolio .project-type-label {
     font-family: "worksans-light", sans-serif;
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     letter-spacing: -0.07rem;
     line-height: 1.2;
     color: #000;
@@ -6067,7 +6093,7 @@ body {
         letter-spacing: -0.08rem; } }
     @media (min-width: 1680px) {
       #portfolio .project-type-label {
-        bottom: -3.1rem; } }
+        top: -2.4rem; } }
   #portfolio .portfolio-item-img-full-wrapper {
     position: absolute; }
   #portfolio .portfolio-item-img-full {
@@ -6137,7 +6163,7 @@ body {
   #portfolio .portfolio-item-tv1,
   #portfolio .portfolio-item-tv2 {
     position: absolute;
-    top: 18%;
+    bottom: 26%;
     left: 1%;
     width: 55.9%;
     max-width: 800px; }
@@ -6149,53 +6175,48 @@ body {
       width: 97%;
       max-width: 776px; }
   #portfolio .portfolio-item-tv2 {
-    top: 34%;
+    bottom: 9%;
     left: 37%; }
-    @media (min-width: 1680px) {
-      #portfolio .portfolio-item-tv2 {
-        top: 36%; } }
   #portfolio .notebooks-set-item1 {
-    top: 28%;
+    bottom: 36%;
     left: 1%; }
     @media (min-width: 1680px) {
       #portfolio .notebooks-set-item1 {
-        top: 25%;
         left: -2%; } }
     #portfolio .notebooks-set-item1 .project-type-label {
       left: auto;
-      right: 12.8%; }
+      right: 11%; }
   #portfolio .notebooks-set-item2 {
-    top: 28%;
+    bottom: 36%;
     left: 57%; }
     @media (min-width: 1680px) {
       #portfolio .notebooks-set-item2 {
-        top: 25%;
         left: 56%; } }
     #portfolio .notebooks-set-item2 .project-type-label {
-      left: 12.8%; }
+      left: 11%; }
   #portfolio .notebooks-set-item3 {
-    top: 38%;
+    bottom: 24%;
     left: 12%; }
     @media (min-width: 1680px) {
       #portfolio .notebooks-set-item3 {
         left: 9%; } }
     #portfolio .notebooks-set-item3 .project-type-label {
       left: auto;
-      right: 12.8%; }
+      right: 11%; }
   #portfolio .notebooks-set-item4 {
-    top: 38%;
+    bottom: 24%;
     left: 46%; }
     @media (min-width: 1680px) {
       #portfolio .notebooks-set-item4 {
         left: 45%; } }
     #portfolio .notebooks-set-item4 .project-type-label {
-      left: 12.8%; }
+      left: 11%; }
   #portfolio .notebooks-set-item5 {
-    top: 48%;
-    left: 27%; }
+    bottom: 12%;
+    left: 28.9%; }
     @media (min-width: 1680px) {
       #portfolio .notebooks-set-item5 {
-        top: 51%; } }
+        left: 26.9%; } }
     #portfolio .notebooks-set-item5 .project-type-label {
       left: 50%;
       bottom: -1rem;
@@ -6204,94 +6225,85 @@ body {
   #portfolio .project-type-label {
     left: 1.6%; }
   #portfolio .portfolio-item-bk .portfolio-item-desktop {
-    top: 18%;
-    left: 15%; }
-    @media (min-width: 1680px) {
-      #portfolio .portfolio-item-bk .portfolio-item-desktop {
-        top: 13%; } }
+    bottom: 22%;
+    left: 12%; }
   #portfolio .portfolio-item-bk .portfolio-item-tablet {
-    top: 44%;
-    left: 11.5%; }
+    bottom: 20%;
+    left: 9.5%; }
   #portfolio .portfolio-item-bk .portfolio-item-notebook {
-    top: 44.6%;
-    left: 52%; }
+    bottom: 20%;
+    left: 50%; }
   #portfolio .portfolio-item-bk .portfolio-item-mobile {
-    top: 55%;
-    left: 6%; }
-    @media (min-width: 1680px) {
-      #portfolio .portfolio-item-bk .portfolio-item-mobile {
-        top: 60%; } }
+    bottom: 19%;
+    left: 4%; }
   #portfolio .portfolio-item-bk .portfolio-item-title-wrapper {
-    right: -33.5%;
-    top: -16%; }
+    right: -35%;
+    top: -12%; }
   #portfolio .portfolio-item-bk .portfolio-item-subtitle-employer {
     margin: 2rem 0 0; }
   #portfolio .portfolio-item-vendomo .portfolio-item-desktop {
-    top: 18%;
+    bottom: 22%;
     left: 23%; }
-    @media (min-width: 1680px) {
-      #portfolio .portfolio-item-vendomo .portfolio-item-desktop {
-        top: 13%; } }
   #portfolio .portfolio-item-vendomo .portfolio-item-tablet {
-    top: 44%;
+    bottom: 20%;
     left: 66%; }
   #portfolio .portfolio-item-vendomo .portfolio-item-notebook {
-    top: 44.6%;
+    bottom: 20%;
     left: 1%; }
   #portfolio .portfolio-item-vendomo .portfolio-item-mobile {
-    top: 55%;
+    bottom: 19%;
     left: 82%; }
-    @media (min-width: 1680px) {
-      #portfolio .portfolio-item-vendomo .portfolio-item-mobile {
-        top: 60%; } }
   #portfolio .portfolio-item-vendomo .portfolio-item-title-wrapper {
-    left: -36%;
-    top: -18%; }
+    left: -37%;
+    top: -13%; }
   #portfolio .portfolio-item-vendomo .portfolio-item-subtitle-employer {
     margin: 2rem 0 0; }
   #portfolio .portfolio-item-vendomo-crm .portfolio-item-desktop {
-    top: 21%;
-    left: 8%; }
-    @media (min-width: 1680px) {
-      #portfolio .portfolio-item-vendomo-crm .portfolio-item-desktop {
-        top: 13%; } }
+    bottom: 22%;
+    left: 7%; }
   #portfolio .portfolio-item-vendomo-crm .portfolio-item-tablet {
-    top: 50%;
+    bottom: 16%;
     left: 22%; }
   #portfolio .portfolio-item-vendomo-crm .portfolio-item-notebook {
-    top: 45.2%;
+    bottom: 20%;
     left: 49%; }
   #portfolio .portfolio-item-vendomo-crm .portfolio-item-mobile {
-    top: 54.6%;
+    bottom: 23%;
     left: 11.7%; }
   #portfolio .portfolio-item-vendomo-crm .portfolio-item-title-wrapper {
-    left: 104%;
-    top: -21%; }
+    right: -35%;
+    top: -12%; }
   #portfolio .portfolio-item-vendomo-crm .portfolio-item-subtitle-employer {
     margin: 2rem 0 0; }
   #portfolio .portfolio-item-foodora .portfolio-item-desktop {
-    top: 19%;
+    bottom: 22%;
     left: 25%; }
-    @media (min-width: 1680px) {
-      #portfolio .portfolio-item-foodora .portfolio-item-desktop {
-        top: 13%; } }
   #portfolio .portfolio-item-foodora .portfolio-item-tablet {
-    top: 44%;
-    left: 72%; }
+    bottom: 20%;
+    left: 73%; }
   #portfolio .portfolio-item-foodora .portfolio-item-notebook {
-    top: 48.6%;
+    bottom: 20%;
     left: 1%; }
   #portfolio .portfolio-item-foodora .portfolio-item-mobile {
-    top: 55.7%;
+    bottom: 19%;
     left: 62.8%; }
   #portfolio .portfolio-item-foodora .portfolio-item-title-wrapper {
-    left: -36%;
-    top: -13%; }
+    left: -37%;
+    top: -12%; }
   #portfolio .portfolio-item-foodora .portfolio-item-subtitle-employer {
     margin: 2rem 0 0; }
   #portfolio .portfolio-item-timvision .portfolio-item-title,
   #portfolio .portfolio-item-cubomusica .portfolio-item-title {
     margin: 0.2rem 0 0.2rem; }
+  #portfolio .portfolio-item-timvision .portfolio-item-title-wrapper-horizontal,
+  #portfolio .portfolio-item-cubomusica .portfolio-item-title-wrapper-horizontal {
+    right: -290px;
+    top: -18%; }
+    @media (min-width: 1680px) {
+      #portfolio .portfolio-item-timvision .portfolio-item-title-wrapper-horizontal,
+      #portfolio .portfolio-item-cubomusica .portfolio-item-title-wrapper-horizontal {
+        right: -350px;
+        top: -23%; } }
   #portfolio .portfolio-item-unicri .portfolio-item-notebook,
   #portfolio .portfolio-item-others .portfolio-item-notebook {
     width: 41%; }
@@ -6308,8 +6320,12 @@ body {
         bottom: -3rem; } }
   #portfolio .portfolio-item-unicri .portfolio-item-title-wrapper-horizontal,
   #portfolio .portfolio-item-others .portfolio-item-title-wrapper-horizontal {
-    left: 36.7%;
-    top: 9%; }
+    right: -44%;
+    top: -38%; }
+    @media (min-width: 1680px) {
+      #portfolio .portfolio-item-unicri .portfolio-item-title-wrapper-horizontal,
+      #portfolio .portfolio-item-others .portfolio-item-title-wrapper-horizontal {
+        right: -45%; } }
   #portfolio .portfolio-item-unicri .portfolio-item-subtitle-employer,
   #portfolio .portfolio-item-others .portfolio-item-subtitle-employer {
     margin-top: 0.5rem; }
@@ -6451,7 +6467,7 @@ body {
     cursor: ns-resize; }
   #portfolio .carousel-labels {
     font-family: "worksans-light", sans-serif;
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     letter-spacing: -0.07rem;
     line-height: 1.2;
     color: #000;
@@ -6476,19 +6492,9 @@ body {
   #experience .section-header-img-wrapper {
     width: 90%;
     max-width: 300px; }
-  #experience .section-header {
-    position: absolute;
-    top: calc(50vh - 360px);
-    left: 0; }
   #experience .section-header-img {
     position: relative;
     left: -14%; }
-  #experience.scrolling-this .section-header {
-    position: fixed; }
-  #experience.scrolled-this .section-header {
-    position: absolute;
-    top: auto;
-    bottom: calc(50vh - 360px); }
   #experience .article-body {
     width: 75%;
     margin-left: 25%;
@@ -6567,6 +6573,7 @@ body {
   min-height: 380px; }
   #references .article-body {
     width: 100%;
+    margin-left: 0;
     padding: 0 6%;
     flex-direction: column; }
   #references .carousel {
@@ -6670,16 +6677,6 @@ body {
   #about .section-header-img-wrapper {
     width: 70%;
     max-width: 190px; }
-  #about .section-header {
-    position: absolute;
-    top: calc(50vh - 332px);
-    left: 0; }
-  #about.scrolling-this .section-header {
-    position: fixed; }
-  #about.scrolled-this .section-header {
-    position: absolute;
-    top: auto;
-    bottom: calc(50vh - 332px); }
   #about .article-body {
     width: 75%;
     margin-left: 25%;
@@ -6884,7 +6881,7 @@ body {
     height: 100%; }
   #about .carousel-labels {
     font-family: "worksans-light", sans-serif;
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     letter-spacing: -0.07rem;
     line-height: 1.2;
     color: #000;
@@ -6905,13 +6902,12 @@ body {
 #contact {
   padding-right: 5%;
   align-items: center;
-  min-height: 65vh; }
+  height: 60vh; }
   #contact .section-header {
-    width: 25%;
-    position: relative; }
-    #contact .section-header .section-header-img-wrapper {
-      width: 77%;
-      max-width: 350px; }
+    height: 60vh; }
+  #contact .section-header-img-wrapper {
+    width: 77%;
+    max-width: 350px; }
   #contact .article-body {
     font-size: 1.6rem;
     height: 85%;
@@ -6984,28 +6980,30 @@ body {
         font-size: 1.6rem;
         letter-spacing: -0.1rem; } }
 
-#outro .section-header-img-wrapper {
-  max-width: 400px;
-  margin-bottom: 3rem; }
-
-#outro .section-header-img {
-  position: relative;
-  left: 5%; }
-
-#outro .section-header-subtitle {
-  font-size: 3rem; }
-
-#outro .section-header-nav {
-  margin-top: 3rem; }
-
-#outro .section-header-sub-title {
-  font-family: "worksans-thin", sans-serif;
-  font-size: 2rem;
-  line-height: 1.2;
-  color: #000;
-  margin-bottom: 1.8rem; }
-  @media (min-width: 1680px) {
-    #outro .section-header-sub-title {
-      font-size: 2.4rem; } }
+#outro {
+  height: 100vh;
+  display: flex;
+  align-items: center; }
+  #outro .section-header {
+    position: static; }
+  #outro .section-header-img-wrapper {
+    max-width: 400px;
+    margin-bottom: 3rem; }
+  #outro .section-header-img {
+    position: relative;
+    left: 5%; }
+  #outro .section-header-subtitle {
+    font-size: 3rem; }
+  #outro .section-header-nav {
+    margin-top: 3rem; }
+  #outro .section-header-sub-title {
+    font-family: "worksans-thin", sans-serif;
+    font-size: 2rem;
+    line-height: 1.2;
+    color: #000;
+    margin-bottom: 1.8rem; }
+    @media (min-width: 1680px) {
+      #outro .section-header-sub-title {
+        font-size: 2.4rem; } }
 
 /*# sourceMappingURL=maps/main.css.map */
