--- a/src/scss/sections/_portfolio.scss
+++ b/src/scss/sections/_portfolio.scss
@@ -20,26 +20,6 @@
     display: none;
   }
 
-  &.scrolling-this .section-header {
-    position: fixed;
-  }
-
-  &.scrolled-this .section-header {
-    position: absolute;
-    top: auto;
-    bottom: calc(50vh - 273px);
-  }
-
-  & .article-body {
-    width: 77%;
-    margin-left: 23%;
-
-    @include media-breakpoint-up(xxl) {
-      width: 75%;
-      margin-left: 25%;
-    }
-  }
-
   & .portfolio-item-vendomo-crm {
     @extend %portfolio-item;
   }
@@ -63,11 +43,8 @@
 
   .portfolio-item-title {
     @include text-regular-title-small();
-    width: 70%;
+    width: 76%;
     margin-bottom: 0.3rem;
-    @include media-breakpoint-up(xxl) {
-      max-width: none;
-    }
   }
 
   .portfolio-item-secondary-title {
@@ -76,6 +53,7 @@
     margin-bottom: 0;
     width: 80%;
   }
+
   .portfolio-item-text {
     @include text-base();
     line-height: 1.2;
@@ -85,55 +63,74 @@
       margin-bottom: 1rem;
       line-height: 1.3;
     }
-
   }
 
-
   .portfolio-item-title-wrapper {
-    display: none;
-    text-align: center;
+    display: block;
     position: absolute;
-    max-width: 241px;
-    background-image: url('/img/portfolio/frame.png');
     width: 31%;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: center;
-    min-height: 320px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    max-width: 200px;
+    padding-top: 42%;
     @include media-breakpoint-up(xxl) {
+      max-width: 241px;
     }
   }
 
   .portfolio-item-title-wrapper-horizontal {
-    display: none;
-    text-align: center;
+    display: block;
     position: absolute;
-    max-width: 320px;
-    width: 61%;
-    background-image: url('/img/portfolio/frame-horizontal.png');
-    background-repeat: no-repeat;
-    background-size: 100%;
-    min-height: 241px;
-    padding: 3.5rem 4rem;
-    left: 60%;
-    top: 8%;
+    width: 52%;
+    max-width: 270px;
+    padding-top: 39%;
+    @include media-breakpoint-up(xxl) {
+      max-width: 320px;
+    }
+
+    & .portfolio-item-title-content {
+      background-image: url('/img/portfolio/frame-horizontal.png');
+    }
 
     & .portfolio-item-title {
       margin-bottom: 0.3rem;
-      margin-top: 0.3rem;
+      margin-top: 0;
     }
 
     .portfolio-item-secondary-title {
-      margin-top: 0.3rem;
+      margin-top: 0;
     }
 
     .portfolio-item-text {
       margin-bottom: 0;
       line-height: 1.2;
+      width: 80%;
     }
+  }
+
+  .portfolio-item-title-content {
+    display: flex;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url('/img/portfolio/frame.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .portfolio-item-title-centering {
+    position: absolute;
+    bottom: 70%;
+    left: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .child-hovered .portfolio-item-title-wrapper,
@@ -169,7 +166,7 @@
     left: 4.2%;
 
     @include media-breakpoint-up(xxl) {
-      bottom: -3.1rem;
+      top: -2.4rem;
     }
   }
 
@@ -280,7 +277,7 @@
   & .portfolio-item-tv1,
   & .portfolio-item-tv2 {
     position: absolute;
-    top: 18%;
+    bottom: 26%;
     left: 1%;
     width: 55.9%;
     max-width: 800px;
@@ -295,42 +292,37 @@
   }
 
   & .portfolio-item-tv2 {
-    top: 34%;
+    bottom: 9%;
     left: 37%;
-    @include media-breakpoint-up(xxl) {
-      top: 36%;
-    }
   }
 
   & .notebooks-set-item1 {
-    top: 28%;
+    bottom: 36%;
     left: 1%;
     @include media-breakpoint-up(xxl) {
-      top: 25%;
       left: -2%;
     }
 
     & .project-type-label {
       left: auto;
-      right: 12.8%;
+      right: 11%;
     }
   }
 
   & .notebooks-set-item2 {
-    top: 28%;
+    bottom: 36%;
     left: 57%;
     @include media-breakpoint-up(xxl) {
-      top: 25%;
       left: 56%;
     }
 
     & .project-type-label {
-      left: 12.8%;
+      left: 11%;
     }
   }
 
   & .notebooks-set-item3 {
-    top: 38%;
+    bottom: 24%;
     left: 12%;
     @include media-breakpoint-up(xxl) {
       left: 9%;
@@ -338,27 +330,27 @@
 
     & .project-type-label {
       left: auto;
-      right: 12.8%;
+      right: 11%;
     }
   }
 
   & .notebooks-set-item4 {
-    top: 38%;
+    bottom: 24%;
     left: 46%;
     @include media-breakpoint-up(xxl) {
       left: 45%;
     }
 
     & .project-type-label {
-      left: 12.8%;
+      left: 11%;
     }
   }
 
   & .notebooks-set-item5 {
-    top: 48%;
-    left: 27%;
+    bottom: 12%;
+    left: 28.9%;
     @include media-breakpoint-up(xxl) {
-      top: 51%;
+      left: 26.9%;
     }
 
     & .project-type-label {
@@ -380,35 +372,28 @@
     @extend %portfolio-item;
 
     & .portfolio-item-desktop {
-      top: 18%;
-      left: 15%;
-      @include media-breakpoint-up(xxl) {
-        top: 13%;
-      }
+      bottom: 22%;
+      left: 12%;
     }
 
     & .portfolio-item-tablet {
-      top: 44%;
-      left: 11.5%;
+      bottom: 20%;
+      left: 9.5%;
     }
 
     & .portfolio-item-notebook {
-      top: 44.6%;
-      left: 52%;
+      bottom: 20%;
+      left: 50%;
     }
 
     & .portfolio-item-mobile {
-      top: 55%;
-      left: 6%;
-
-      @include media-breakpoint-up(xxl) {
-        top: 60%;
-      }
+      bottom: 19%;
+      left: 4%;
     }
 
     & .portfolio-item-title-wrapper {
-      right: -33.5%;
-      top: -16%;
+      right: -35%;
+      top: -12%;
     }
 
     & .portfolio-item-subtitle-employer {
@@ -423,36 +408,28 @@
     @extend %portfolio-item;
 
     & .portfolio-item-desktop {
-      top: 18%;
+      bottom: 22%;
       left: 23%;
-
-      @include media-breakpoint-up(xxl) {
-        top: 13%;
-      }
     }
 
     & .portfolio-item-tablet {
-      top: 44%;
+      bottom: 20%;
       left: 66%;
     }
 
     & .portfolio-item-notebook {
-      top: 44.6%;
+      bottom: 20%;
       left: 1%;
     }
 
     & .portfolio-item-mobile {
-      top: 55%;
+      bottom: 19%;
       left: 82%;
-
-      @include media-breakpoint-up(xxl) {
-        top: 60%;
-      }
     }
 
     & .portfolio-item-title-wrapper {
-      left: -36%;
-      top: -18%;
+      left: -37%;
+      top: -13%;
     }
 
     & .portfolio-item-subtitle-employer {
@@ -467,32 +444,28 @@
     @extend %portfolio-item;
 
     & .portfolio-item-desktop {
-      top: 21%;
-      left: 8%;
-
-      @include media-breakpoint-up(xxl) {
-        top: 13%;
-      }
+      bottom: 22%;
+      left: 7%;
     }
 
     & .portfolio-item-tablet {
-      top: 50%;
+      bottom: 16%;
       left: 22%;
     }
 
     & .portfolio-item-notebook {
-      top: 45.2%;
+      bottom: 20%;
       left: 49%;
     }
 
     & .portfolio-item-mobile {
-      top: 54.6%;
+      bottom: 23%;
       left: 11.7%;
     }
 
     & .portfolio-item-title-wrapper {
-      left: 104%;
-      top: -21%;
+      right: -35%;
+      top: -12%;
     }
 
     & .portfolio-item-subtitle-employer {
@@ -507,32 +480,28 @@
     @extend %portfolio-item;
 
     & .portfolio-item-desktop {
-      top: 19%;
+      bottom: 22%;
       left: 25%;
-
-      @include media-breakpoint-up(xxl) {
-        top: 13%;
-      }
     }
 
     & .portfolio-item-tablet {
-      top: 44%;
-      left: 72%;
+      bottom: 20%;
+      left: 73%;
     }
 
     & .portfolio-item-notebook {
-      top: 48.6%;
+      bottom: 20%;
       left: 1%;
     }
 
     & .portfolio-item-mobile {
-      top: 55.7%;
+      bottom: 19%;
       left: 62.8%;
     }
 
     & .portfolio-item-title-wrapper {
-      left: -36%;
-      top: -13%;
+      left: -37%;
+      top: -12%;
     }
 
     & .portfolio-item-subtitle-employer {
@@ -550,6 +519,15 @@
     & .portfolio-item-title {
       margin: 0.2rem 0 0.2rem;
     }
+
+    & .portfolio-item-title-wrapper-horizontal {
+      right: -290px;
+      top: -18%;
+      @include media-breakpoint-up(xxl) {
+        right: -350px;
+        top: -23%;
+      }
+    }
   }
 
 
@@ -561,7 +539,6 @@
 
     & .portfolio-item-notebook {
       width: 41%;
-
       @include media-breakpoint-up(xxl) {
         width: 42%;
       }
@@ -569,15 +546,17 @@
 
     & .project-type-label {
       bottom: -2rem;
-
       @include media-breakpoint-up(xxl) {
         bottom: -3rem;
       }
     }
 
     & .portfolio-item-title-wrapper-horizontal {
-      left: 36.7%;
-      top: 9%;
+      right: -44%;
+      top: -38%;
+      @include media-breakpoint-up(xxl) {
+        right: -45%;
+      }
     }
 
     & .portfolio-item-subtitle-employer {
