--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6297,13 +6297,13 @@ body {
     margin: 0.2rem 0 0.2rem; }
   #portfolio .portfolio-item-timvision .portfolio-item-title-wrapper-horizontal,
   #portfolio .portfolio-item-cubomusica .portfolio-item-title-wrapper-horizontal {
-    right: -290px;
-    top: -18%; }
+    right: 12%;
+    top: -60%; }
     @media (min-width: 1680px) {
       #portfolio .portfolio-item-timvision .portfolio-item-title-wrapper-horizontal,
       #portfolio .portfolio-item-cubomusica .portfolio-item-title-wrapper-horizontal {
-        right: -350px;
-        top: -23%; } }
+        right: 15%;
+        top: -300px; } }
   #portfolio .portfolio-item-unicri .portfolio-item-notebook,
   #portfolio .portfolio-item-others .portfolio-item-notebook {
     width: 41%; }
@@ -6321,11 +6321,12 @@ body {
   #portfolio .portfolio-item-unicri .portfolio-item-title-wrapper-horizontal,
   #portfolio .portfolio-item-others .portfolio-item-title-wrapper-horizontal {
     right: -44%;
-    top: -38%; }
+    top: -42%; }
     @media (min-width: 1680px) {
       #portfolio .portfolio-item-unicri .portfolio-item-title-wrapper-horizontal,
       #portfolio .portfolio-item-others .portfolio-item-title-wrapper-horizontal {
-        right: -45%; } }
+        right: -45%;
+        top: -180px; } }
   #portfolio .portfolio-item-unicri .portfolio-item-subtitle-employer,
   #portfolio .portfolio-item-others .portfolio-item-subtitle-employer {
     margin-top: 0.5rem; }
@@ -6345,6 +6346,26 @@ body {
     left: 60px;
     top: 40px;
     width: 17%; }
+  #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-notebook-wrapper, #portfolio .portfolio-item-modal-tv .portfolio-item-notebook-wrapper, #portfolio .portfolio-item-modal-notebook .portfolio-item-notebook-wrapper {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    min-height: 500px;
+    left: 50%;
+    right: 0; }
+    @media (min-width: 1680px) {
+      #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-notebook-wrapper, #portfolio .portfolio-item-modal-tv .portfolio-item-notebook-wrapper, #portfolio .portfolio-item-modal-notebook .portfolio-item-notebook-wrapper {
+        min-height: 770px; } }
+  #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-mobile-wrapper, #portfolio .portfolio-item-modal-tv .portfolio-item-mobile-wrapper, #portfolio .portfolio-item-modal-notebook .portfolio-item-mobile-wrapper {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    min-height: 500px;
+    left: 0;
+    right: 50%; }
+    @media (min-width: 1680px) {
+      #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-mobile-wrapper, #portfolio .portfolio-item-modal-tv .portfolio-item-mobile-wrapper, #portfolio .portfolio-item-modal-notebook .portfolio-item-mobile-wrapper {
+        min-height: 770px; } }
   #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-modal-title, #portfolio .portfolio-item-modal-tv .portfolio-item-modal-title, #portfolio .portfolio-item-modal-notebook .portfolio-item-modal-title {
     font-family: "worksans-regular", sans-serif;
     font-size: 1.5rem;
@@ -6369,25 +6390,55 @@ body {
         font-size: 1.7rem;
         letter-spacing: 0.03rem; } }
   #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-notebook, #portfolio .portfolio-item-modal-tv .portfolio-item-notebook, #portfolio .portfolio-item-modal-notebook .portfolio-item-notebook {
-    position: fixed;
-    left: 16.3%;
-    top: 4%;
-    width: 82%;
-    max-width: none; }
+    position: absolute;
+    padding-top: 86.3%;
+    top: 50%;
+    left: -55%;
+    bottom: auto;
+    max-width: none;
+    width: 133%;
+    margin-top: -39%; }
+    @media (min-width: 1680px) {
+      #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-notebook, #portfolio .portfolio-item-modal-tv .portfolio-item-notebook, #portfolio .portfolio-item-modal-notebook .portfolio-item-notebook {
+        width: 148%;
+        margin-top: -42%;
+        left: -57%; } }
+    #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-notebook .portfolio-item-device-img, #portfolio .portfolio-item-modal-tv .portfolio-item-notebook .portfolio-item-device-img, #portfolio .portfolio-item-modal-notebook .portfolio-item-notebook .portfolio-item-device-img {
+      position: absolute;
+      top: 0;
+      left: 0; }
     #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-notebook .portfolio-item-img-full-wrapper, #portfolio .portfolio-item-modal-tv .portfolio-item-notebook .portfolio-item-img-full-wrapper, #portfolio .portfolio-item-modal-notebook .portfolio-item-notebook .portfolio-item-img-full-wrapper {
-      top: 56px;
+      top: 4%;
       left: 12.5%;
       right: 12.5%;
-      bottom: 206px; }
+      bottom: 20.5%; }
+      @media (min-width: 1680px) {
+        #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-notebook .portfolio-item-img-full-wrapper, #portfolio .portfolio-item-modal-tv .portfolio-item-notebook .portfolio-item-img-full-wrapper, #portfolio .portfolio-item-modal-notebook .portfolio-item-notebook .portfolio-item-img-full-wrapper {
+          bottom: 12.5%; } }
     #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-notebook .wrapper, #portfolio .portfolio-item-modal-tv .portfolio-item-notebook .wrapper, #portfolio .portfolio-item-modal-notebook .portfolio-item-notebook .wrapper {
       width: 100%;
       height: 100%; }
   #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-mobile, #portfolio .portfolio-item-modal-tv .portfolio-item-mobile, #portfolio .portfolio-item-modal-notebook .portfolio-item-mobile {
-    position: fixed;
-    left: 8%;
-    top: 45%;
-    width: 13%;
-    max-width: none; }
+    position: absolute;
+    padding-top: 55.5%;
+    top: 50%;
+    left: auto;
+    right: 48%;
+    bottom: auto;
+    max-width: none;
+    width: 24%;
+    margin-top: -13%;
+    z-index: 1; }
+    @media (min-width: 1680px) {
+      #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-mobile, #portfolio .portfolio-item-modal-tv .portfolio-item-mobile, #portfolio .portfolio-item-modal-notebook .portfolio-item-mobile {
+        width: 26%;
+        margin-top: -10%;
+        right: 51%;
+        padding-top: 60.1%; } }
+    #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-mobile .portfolio-item-device-img, #portfolio .portfolio-item-modal-tv .portfolio-item-mobile .portfolio-item-device-img, #portfolio .portfolio-item-modal-notebook .portfolio-item-mobile .portfolio-item-device-img {
+      position: absolute;
+      top: 0;
+      left: 0; }
     #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-mobile .portfolio-item-img-full-wrapper, #portfolio .portfolio-item-modal-tv .portfolio-item-mobile .portfolio-item-img-full-wrapper, #portfolio .portfolio-item-modal-notebook .portfolio-item-mobile .portfolio-item-img-full-wrapper {
       top: 50px;
       left: 2.5%;
@@ -6439,9 +6490,13 @@ body {
   #portfolio .portfolio-item-modal-notebook-mobile .carousel-control.right {
     right: 0; }
   #portfolio .portfolio-item-modal-notebook-mobile .carousel-indicators {
-    bottom: -5%;
-    left: 24.4%;
-    right: 9.9%; }
+    bottom: 7.8%;
+    left: 0;
+    right: 0;
+    position: absolute; }
+    @media (min-width: 1680px) {
+      #portfolio .portfolio-item-modal-notebook-mobile .carousel-indicators {
+        bottom: -2.2%; } }
   #portfolio .portfolio-item-modal-tv .carousel-control {
     top: 39%; }
   #portfolio .portfolio-item-modal-tv .carousel-control.left {
